--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "login_url": "https://dip.world-family.co.jp/spdwe_login/",
   "video_url": "https://dip.world-family.co.jp/spdwe/movie2/1/",
-  "output_har_path": "./network_log.har",
+  "output_har_path": "har/network_log.har",
   "wait_options": {
-    "video_play_duration_sec": 60
+    "video_play_duration_sec": 1
   },
   "timeout_ms": {
     "navigation": 20000,
