--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # 設定ファイル
-config/credentials.json
+src/config/credentials.json
 
 # 出力ディレクトリ
 har/
@@ -11,11 +11,13 @@ __pycache__/
 *.pyc
 .venv/
 venv/
+src/__pycache__/
+src/*/__pycache__/
 
 # IDE/Editor
 .vscode/
 .idea/
-
 input/
 old/
+old2/
 downloader/VIDEO/
